--- a/index.html
+++ b/index.html
@@ -7,78 +7,20 @@
     <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <header>Header</header>
-    <main>
-      <img class="logo" src="images/logo.png" alt="" class="logo">
-      <img class="background" src="images/background.jpg" alt="" />
-    </main>
-    <aside>
-      <img class="background" src="images/female-hand.jpg" alt="" />
-      <div class="animated">
-        <img
-          src="https://images.unsplash.com/photo-1685970731571-72ede0cb26ea?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1719862057229-4dd650b5ccee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://plus.unsplash.com/premium_photo-1709033404514-c3953af680b4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1685970731571-72ede0cb26ea?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1719862057229-4dd650b5ccee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://plus.unsplash.com/premium_photo-1709033404514-c3953af680b4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1685970731571-72ede0cb26ea?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1719862057229-4dd650b5ccee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://plus.unsplash.com/premium_photo-1709033404514-c3953af680b4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1685970731571-72ede0cb26ea?q=80&w=1588&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://images.unsplash.com/photo-1719862057229-4dd650b5ccee?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTZ8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-
-        <img
-          src="https://plus.unsplash.com/premium_photo-1709033404514-c3953af680b4?w=500&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTd8fGNvbGxhcnxlbnwwfHwwfHx8MA%3D%3D"
-          alt=""
-        />
-      </div>
-    </aside>
-
-    <footer>Footer</footer>
-
-    <script type="module" src="script.js"></script>
+    <div class="page">
+      <header>Header</header>
+      <main>
+        <img class="logo" src="images/logo.png" alt="" class="logo">
+        <img class="background" src="images/background.jpg" alt="" />
+      </main>
+      <aside>
+        <img class="background" src="images/female-hand.jpg" alt="" />
+        <div class="animated"></div>
+      </aside>
+  
+      <footer>Footer</footer>
+  
+      <script type="module" src="script.js"></script>
+    </div>
   </body>
 </html>
