beautifying static images and zooming while animation is running done!

--- a/index.html
+++ b/index.html
@@ -10,11 +10,18 @@
     <div class="page">
       <header>Header</header>
       <main>
-        <img class="logo" src="images/logo.png" alt="" class="logo">
-        <img class="background" src="images/background.jpg" alt="" />
+        <div class="logo">
+          <img class="scalated-border" src="images/color-patch.png" alt="">
+          <img src="images/color-patch.png" alt="">
+          <div>
+            <h2>joyería y busitería fina</h2>
+            <h1 class="neonText">Bueno Röller</h1>
+          </div>
+        </div>
+        <img class="background" src="images/base-flowers.png" alt="" />
       </main>
       <aside>
-        <img class="background" src="images/female-hand.jpg" alt="" />
+        <img class="background masked-image" src="images/color-patch.png" alt="" />
         <div class="animated"></div>
       </aside>
   
