--- a/index.html
+++ b/index.html
@@ -11,17 +11,17 @@
       <header>Header</header>
       <main>
         <div class="logo">
-          <img class="scalated-border" src="images/color-patch.png" alt="">
-          <img src="images/color-patch.png" alt="">
+          <img class="scalated-border" src="images/color-patch.webp" alt="">
+          <img src="images/color-patch.webp" alt="">
           <div>
             <h2>joyería y busitería fina</h2>
             <h1 class="neonText">Bueno Röller</h1>
           </div>
         </div>
-        <img class="background" src="images/base-flowers.png" alt="" />
+        <img class="background" src="images/base-flowers.webp" alt="" />
       </main>
       <aside>
-        <img class="background masked-image" src="images/color-patch.png" alt="" />
+        <img class="background masked-image" src="images/color-patch.webp" alt="" />
         <div class="animated"></div>
       </aside>
   
