--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="page">
-      <header>Header</header>
+      <header></header>
       <main>
         <div class="logo">
           <img class="scalated-border" src="images/color-patch.webp" alt="">
@@ -25,7 +25,7 @@
         <div class="animated"></div>
       </aside>
   
-      <footer>Footer</footer>
+      <footer></footer>
   
       <script type="module" src="script.js"></script>
     </div>
