responsive background image

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img class="background" src="images/base-flowers.webp" alt="" />
       </main>
       <aside>
-        <img class="background masked-image" src="images/color-patch.webp" alt="" />
+        <img class="background" src="images/color-hand.webp" alt="" />
         <div class="animated"></div>
       </aside>
   
