--- a/index.html
+++ b/index.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bueno Röller | Joyería y bisutería fina</title>
+    <meta name="robots" content="index, follow">
+    <meta name="theme-color" content="#ff00d4">
+    <meta name="description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
+    <link rel="icon" href="images/icon32.ico">
+
+    <!-- Open Graph -->
+    <meta property="og:title" content=">Bueno Röller | Joyería y bisutería fina"> 
+    <meta property="og:description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
+    <meta property="og:image" content="images/icon.png">
+
+
     <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
   <body>
