--- a/index.html
+++ b/index.html
@@ -3,17 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bueno Röller | Joyería y bisutería fina</title>
     <meta name="robots" content="index, follow">
     <meta name="theme-color" content="#ff00d4">
-    <meta name="description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
     <link rel="icon" href="images/icon32.ico">
 
-    <!-- Open Graph -->
-    <meta property="og:title" content=">Bueno Röller | Joyería y bisutería fina"> 
-    <meta property="og:description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
-    <meta property="og:image" content="images/icon.png">
+    <!-- HTML Meta Tags -->
+<title>Bueno Röller | Joyería y bisutería fina</title>
+<meta name="description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
 
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://aldolunabueno.github.io/jewelry-landing-page/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Bueno Röller | Joyería y bisutería fina">
+<meta property="og:description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
+<meta property="og:image" content="https://aldolunabueno.github.ioimages/icon.png">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="aldolunabueno.github.io">
+<meta property="twitter:url" content="https://aldolunabueno.github.io/jewelry-landing-page/">
+<meta name="twitter:title" content="Bueno Röller | Joyería y bisutería fina">
+<meta name="twitter:description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
+<meta name="twitter:image" content="https://aldolunabueno.github.ioimages/icon.png">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
     <link type="text/css" rel="stylesheet" href="style.css" />
   </head>
