--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Bueno Röller | Joyería y bisutería fina">
 <meta property="og:description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
-<meta property="og:image" content="https://aldolunabueno.github.ioimages/icon.png">
+<meta property="og:image" content="images/icon.png">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
 <meta property="twitter:url" content="https://aldolunabueno.github.io/jewelry-landing-page/">
 <meta name="twitter:title" content="Bueno Röller | Joyería y bisutería fina">
 <meta name="twitter:description" content="Sitio web de joyería y bisutería fina de Silvia Bueno Roller.">
-<meta name="twitter:image" content="https://aldolunabueno.github.ioimages/icon.png">
+<meta name="twitter:image" content="images/icon.png">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
